--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="titulo"></h1>
+            <h1 class="titulo">Lista de tareas</h1>
         </div>
         <button id="add-btn" class="addBtn">Agregar una tarea</button>
         <ul class="list"></ul>
+        <button class="cleanBtn">Limpiar tareas</button>
     </div>
     <script type="module" src="/Scripts/main.js"></script>
 </body>
