Styles.css a index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </div>
         <button id="add-btn" class="addBtn">Agregar una tarea</button>
         <ul class="list"></ul>
+        <div class="LatBtn">
         <button class="cleanBtn">Limpiar tareas</button>
+    </div>
     </div>
     <script type="module" src="/Scripts/main.js"></script>
 </body>
